# Streamlit-meteocean

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  DEMO.md  MeteoceanForecast.spec  README.md  RUFLO.md  SETUP.md  launcher.py
streamlitapp/: FOLLOWUP.md  pyproject.toml  requirements.txt
streamlitapp/app/: Home.py  _page_template.py
streamlitapp/app/pages/: 1_Current_Speed.py  2_Wave_Height.py  3_Wind_Speed.py  4_Data_Upload.py  5_Upload_Log.py
streamlitapp/app_data/: upload_log.json
streamlitapp/models/current_speed/prophet_multiplicative_exogenous_trials/: prophet_metadata.json  trials_log.json
streamlitapp/models/current_speed/prophet_multiplicative_univariate_trials/: prophet_metadata.json  trials_log.json
streamlitapp/src/meteocean_forecast/: path_utils.py
streamlitapp/src/meteocean_forecast/config/: model_registry.py
streamlitapp/src/meteocean_forecast/data/: uploaded_data_store.py
streamlitapp/src/meteocean_forecast/domain/: forecast_request.py  freshness.py  model_metadata.py
streamlitapp/src/meteocean_forecast/features/: feature_engineering.py  raw_xlsx_reader.py
streamlitapp/src/meteocean_forecast/inference/: forecasting_service.py  model_loader.py  prophet_adapter.py
streamlitapp/tests/: conftest.py  test_exogenous_forecast_decoupling.py  test_feature_engineering_contract.py  test_freshness_status.py  test_horizon_validation.py  test_json_model_loader.py  test_launcher.py  test_path_utils.py  test_prophet_inference_contract.py  test_real_xlsx_canonical_ingestion.py  test_upload_log_page.py  test_uploaded_data_store.py
(+34 files in other folders)
